projects store links updated

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="" target="_blank">Boost App Malaysia</a></h3>
+                                <h3 class="title"><a href="#">Boost App Malaysia</a></h3>
                                 <p class="summary"> With Boost, pay your bills conveniently with our eWallet without the hassle of using physical cash. Perform prepaid top-ups on the go, and enjoy rewarding cashback! Activate Boost PayLater and enjoy 30 additional days for
                                     bill payment or prepaid reload! Get protected with bite-sized insurance plans that offer comprehensive coverage.
 
@@ -135,7 +135,7 @@
 
                                 <div class="desc text-left">
                                     <a href="https://play.google.com/store/apps/details?id=my.com.myboost&hl=en-IN" target="_blank">Google Play</a><br/>
-                                    <a href="https://apps.apple.com/in/app/friendspire/id1435691931" target="_blank">App Store</a><br/>
+                                    <a href="https://apps.apple.com/my/app/boost-app-malaysia/id1235987570" target="_blank">App Store</a><br/>
 
                                 </div>
                                 <!--//desc-->
@@ -145,7 +145,7 @@
                             <!-- friend spire -->
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="" target="_blank">Friendspire(Android & IOS Native)</a></h3>
+                                <h3 class="title"><a href="#">Friendspire(Android & IOS Native)</a></h3>
                                 <p class="summary">Friendspire - App helps user to come up with friends rate, review and more to movies, series and books etc. </p>
                                 <div class="featured-image">
                                     <a href="" target="_blank">
@@ -168,7 +168,7 @@
                             <!-- sikh diary  -->
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="" target="_blank">Sikh Diary(Android Native)</a></h3>
+                                <h3 class="title"><a href="#">Sikh Diary(Android Native)</a></h3>
                                 <p class="summary">Sikh Diary - A Sikh religious app. </p>
                                 <div class="featured-image">
                                     <a href="" target="_blank">
@@ -195,7 +195,7 @@
                             <!-- MyKiddo -->
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="" target="_blank">MYKiDDO(Android & IOS Flutter)</a></h3>
+                                <h3 class="title"><a href="#">MYKiDDO(Android & IOS Flutter)</a></h3>
                                 <p class="summary">MYKiDDO - Daycare / Childcare App & Software. </p>
                                 <div class="featured-image">
                                     <a href="" target="_blank">
